--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -7,20 +7,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Starter Web App</a>
+      <a class="navbar-brand" href="/">Starter Web App</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li id="navbar-link-home"><a href="/">Home</a></li>
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developer <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">All Data</a></li>
+            <li><a href="/alldata">All Data</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">Specific Health Data</li>
             <li><a href="#">Weight</a></li>
