--- a/views/index.html
+++ b/views/index.html
@@ -1,70 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<meta name="description" content="">
-	<meta name="author" content="">
-	<link rel="icon" href="../../favicon.ico">
-
-	<title>Navbar Template for Bootstrap</title>
-
-	<!-- Bootstrap core CSS -->
-	<link href="/style/bootstrap.min.css" rel="stylesheet">
-</head>
-
+<%- include common/header.ejs %>
 <body>
-
-
 	<div class="container">
 		<!-- Static navbar -->
-		{{include navbar.html}}
+		<%- include common/navbar.html %>
 
 		<!-- Main component for a primary marketing message or call to action -->
 		<div class="jumbotron">
-			<h1>Navbar example</h1>
-			<p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-			<p>
-				<a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-			</p>
+			<h2>Get Started</h2>
+			<p>This is the starter web application. It pulls in data from CloudantDB on Bluemix. To find out more about what data is being stored, explore the links under <strong>Developer</strong>.</p>
 		</div>
-
-
-		<div class="col-md-6">
-			<table class="table">
-				<thead>
-					<tr>
-						<th>#</th>
-						<th>First Name</th>
-						<th>Last Name</th>
-						<th>Username</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>1</td>
-						<td>Mark</td>
-						<td>Otto</td>
-						<td>@mdo</td>
-					</tr>
-					<tr>
-						<td>2</td>
-						<td>Jacob</td>
-						<td>Thornton</td>
-						<td>@fat</td>
-					</tr>
-					<tr>
-						<td>3</td>
-						<td>Larry</td>
-						<td>the Bird</td>
-						<td>@twitter</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-
 	</div> <!-- /container -->
 
 
@@ -72,15 +18,7 @@
 	================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 
-	<script type="text/javascript" src="/scripts/index.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="/scripts/bootstrap.min.js"></script>
-
-	<!-- include navbar -->
-	<script>
-	$(function(){
-		$("#includedContent").load("navbar.html");
-	});
-	</script>
+	<%- include common/footer.html %>
+	<script src="/scripts/index.js"></script>
 </body>
 </html>
