--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -21,9 +21,9 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developer <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/alldata">All Data</a></li>
-            <li role="separator" class="divider"></li>
+            <!-- <li role="separator" class="divider"></li>
             <li class="dropdown-header">Specific Health Data</li>
-            <li><a href="#">Weight</a></li>
+            <li><a href="#">Weight</a></li> -->
           </ul>
         </li>
       </ul>
